[package]
name = "one_instance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["net", "macros", "rt", "rt-multi-thread", "signal", "process", "io-std", "io-util"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = ["Win32_System", "Win32_System_Console", "Win32_System_Threading"] }
